<?xml version="1.0"?>
<package>
  <name>dsvplanner_launch</name>
  <version>0.0.0</version>
  <description>The package that interfaces and launches the drrt planner</description>

  <maintainer email="hongbiaz@andrew.cmu.edu">Hongbiao Zhu</maintainer>

  <license>TODO</license>

  <author>Hongbiao Zhu</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nbvplanner</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>tf</build_depend>
  <buildtool_depend>geometry_msgs</buildtool_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>graph_utils</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>


  <run_depend>nbvplanner</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>graph_utils</run_depend>
  <run_depend>nav_msgs</run_depend>
</package>
