<?xml version="1.0"?>
<package format="3">
  <name>dsvp_launch</name>
  <version>0.0.1</version>
  <description>The package that interfaces and launches the DSV Planner</description>
  <maintainer email="hongbiaz@andrew.cmu.edu">Hongbiao Zhu</maintainer>
  <license>BSD</license>
  
  <author>Hongbiao Zhu</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>tf2</build_depend>
  <buildtool_depend>geometry_msgs</buildtool_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>graph_utils</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>dsvplanner</build_depend>
  <build_depend>graph_planner</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
