<?xml version="1.0"?>
<package format="2">
  <name>graph_planner</name>
  <version>0.0.1</version>
  <description>The graph planner package</description>
  <maintainer email="hongbiaz@andrew.cmu.edu">Hongbiao Zhu</maintainer>
  <license>BSD</license>

  <author>Hongbiao Zhu</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>graph_utils</build_depend>
  <build_depend>misc_utils</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>graph_utils</build_export_depend>
  <build_export_depend>misc_utils</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>graph_utils</exec_depend>
  <exec_depend>misc_utils</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
