<?xml version="1.0"?>
<package format="3">
  <name>misc_utils</name>
  <version>0.0.1</version>
  <description>The misc utils package</description>
  <maintainer email="ccao1@andrew.cmu.edu">Chao Cao</maintainer>
  <license>BSD</license>

  <author>Chao Cao</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
